2007-04-24  Didier Verna  <didier@xemacs.org>

	Improve the type of gnus-ignored-from-addresses.
	* gnus-util.el (gnus-orify-regexp): New function.
	* message.el (gnus-util): Require it.
	* message.el (message-dont-reply-to-names): Use gnus-orify-regexp.
	* gnus-sum.el (gnus-ignored-from-addresses): New function.
	* gnus-sum.el (gnus-summary-from-or-to-or-newsgroups): Use it.

2007-04-24  Didier Verna  <didier@xemacs.org>

	* gnus-sum.el:
	* gnus-utils.el: Fix some trailing whitespaces.

2007-04-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-summary-resend-message-edit): Add Gcc header.
	(gnus-summary-resend-bounced-mail): Ditto; search whole body for parent
	article's Message-ID; refer parent article in summary buffer.

	* message.el (message-bounce): Call mime-to-mml.

	* dgnushack.el (byte-optimize-form-code-walker): Fix the form which was
	not helpful to Emacs 21.1 and 21.2 for detecting a bug that does not
	optimize and/or forms properly.

2007-04-22  Reiner Steib  <Reiner.Steib@gmx.de>

	* dgnushack.el (with-syntax-table): XEmacs bug has been fixed.  Add
	URL.

2007-04-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-summary-supersede-article): Add Gcc header.

2007-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-strip-charset-parameters): New function.
	(gnus-mime-view-part-as-charset): Use it; redisplay subpart currently
	displayed of multipart/alternative part if it is invoked from summary
	buffer.

	* mm-view.el (mm-inline-text-html-render-with-w3m)
	(mm-inline-text-html-render-with-w3m-standalone)
	(mm-inline-render-with-function): Use mail-parse-charset by default.

2007-04-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-uu.el (gnus-uu-digest-mail-forward): Pull articles processed
	from gnus-newsgroup-processable.

2007-04-16  Didier Verna  <didier@xemacs.org>

	* gnus-msg.el (gnus-configure-posting-styles): Handle
	message-signature-directory properly with :file syntax. Reported by
	"Leo".
